<?xml version="1.0"?>
<package>
  <name>mars_test</name>
  <version>0.1.0</version>
  <description>
  mars project first tests
  </description>
  <author>Shahar hagbi</author>
  <maintainer email="jsantossimon@gmail.com">Jorge Santos</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/turtlebot_arm_moveit_demos</url>
  <url type="repository">https://github.com/turtlebot/turtlebot_arm</url>
  <url type="bugtracker">https://github.com/turtlebot/turtlebot_arm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
</package>
